# cod-stac

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  convert.py  docker-compose.yml  gdb1.py  gdb2.py  gdb3.py  pyproject.toml  requirements.txt
app/: __main__.py  config.py  images.py  level_1.py  level_1a.py  level_1b.py  level_2.py  level_2a.py  level_2b.py  level_2l.py  level_3.py  level_3l.py  pmtiles.py  stac.py  utils.py
inputs/: level_1a.json  level_2.json  m49.csv  metadata.csv  unterm.csv
